--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My GitHub Page</title>
+  <title>My Site</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
