--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My GitHub Page</title>
+  <title>My Site</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -12,20 +12,14 @@
   <nav>
     <ul>
       <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
+      <li><a href="#projekter">Projekter</a></li>
     </ul>
   </nav>
 
   <main>
     <section id="home">
       <h2>About Me</h2>
-      <p>I am a web developer passionate about creating amazing websites.</p>
-    </section>
-
-    <section id="about">
-      <h2>About Me</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam cursus fermentum magna vitae consectetur. Donec et neque ac nunc fringilla sagittis ut in nisl. Suspendisse sed feugiat nisl. Sed faucibus lorem vitae sem finibus, vitae cursus metus volutpat.</p>
+      <p>Her er mine skole projekter for chromebooks.</p>
     </section>
 
     <section id="projects">
