--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <nav>
     <ul>
       <li><a href="#home">Home</a></li>
-      <li><a href="#projekter">Projekter</a></li>
+      <li><a href="#projects">Projekter</a></li>
     </ul>
   </nav>
 
