--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main>
     <section id="home">
       <h2>About Me</h2>
-      <p>Her er mine skole projekter for chromebooks.</p>
+      <p>Her er mine skole projekter for vores chromebooks.</p>
     </section>
 
     <section id="projects">
