--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Site</title>
+  <title>Chromebook Hjemmeside</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to My GitHub Page!</h1>
+    <h1>Velkommen til min side.</h1>
   </header>
 
   <nav>
     <ul>
-      <li><a href="#home">Home</a></li>
+      <li><a href="#home">Hjem</a></li>
       <li><a href="#projects">Projekter</a></li>
     </ul>
   </nav>
 
   <main>
     <section id="home">
-      <h2>About Me</h2>
-      <p>Her er mine skole projekter for vores chromebooks.</p>
+      <h2></h2>
     </section>
 
     <section id="projects">
